Fix #214: Add next and previous buttons for the dragger of the mouse-wheeled horizontal scrollbar.

--- a/wayback-webapp/src/main/webapp/css/jquery.mCustomScrollbar.css
+++ b/wayback-webapp/src/main/webapp/css/jquery.mCustomScrollbar.css
@@ -368,7 +368,7 @@ yx-axis
 	.mCSB_scrollTools .mCSB_buttonDown,
 	.mCSB_scrollTools .mCSB_buttonLeft,
 	.mCSB_scrollTools .mCSB_buttonRight{
-		background-image: url(mCSB_buttons.png); /* css sprites */
+		background-image: url(/wayback/images/mCSB_buttons.png); /* css sprites */
 		background-repeat: no-repeat;
 		opacity: 0.4; filter: "alpha(opacity=40)"; -ms-filter: "alpha(opacity=40)"; 
 	}
